# grid-challenge

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: clipping.rs  export.rs  gpx.rs  grid.rs  lib.rs  matching.rs  osm.rs  utils.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  db.rs  errors.rs  main.rs  strava.rs
crates/server/src/routes/: challenges.rs  gpx.rs  mod.rs  preview.rs  share.rs  strava.rs
migrations/: 001_initial.sql
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte  app.css  main.js
web/src/components/: ChallengeCard.svelte  ConfirmDialog.svelte  CoverageRing.svelte  GpxFileCard.svelte  GpxStatsPanel.svelte  GpxUpload.svelte  Logo.svelte  MiniMap.svelte  PolygonEditor.svelte  ScorePanel.svelte  StravaConnect.svelte  Toast.svelte
web/src/lib/: api.js  formatters.js  map.js  toast.js
web/src/pages/: CreateChallenge.svelte  Dashboard.svelte  Login.svelte  PublicChallenge.svelte  Register.svelte  ViewChallenge.svelte
